# riscv-emu

cpp/: CMakeLists.txt  Cleanup.sh  Doxygen.cpp  README.md  REGRESSION_test.sh  rv32uiemu.cpp
cpp/vs/: comp.bat
testdat/: MEMO.txt  elf2txt.sh  whisper
testdat/benchmarks/: dhrystone.riscv  dhrystone.riscv.bin.txt  dhrystone.riscv.dump  median.riscv  median.riscv.dump  mm.riscv  mm.riscv.dump  mt-matmul.riscv  mt-matmul.riscv.dump  mt-vvadd.riscv  mt-vvadd.riscv.dump  multiply.riscv  multiply.riscv.dump  pmp.riscv  pmp.riscv.dump  qsort.riscv  qsort.riscv.dump  rsort.riscv  rsort.riscv.dump  spmv.riscv  spmv.riscv.dump  towers.riscv  towers.riscv.dump  vvadd.riscv  vvadd.riscv.dump
testdat/benchmarks_00/: dhrystone.riscv  dhrystone.riscv.bin.txt  dhrystone.riscv.dump  median.riscv  median.riscv.dump  mm.riscv  mm.riscv.dump  mt-matmul.riscv  mt-matmul.riscv.dump  mt-vvadd.riscv  mt-vvadd.riscv.dump  multiply.riscv  multiply.riscv.dump  pmp.riscv  pmp.riscv.dump  qsort.riscv  qsort.riscv.dump  rsort.riscv  rsort.riscv.dump  spmv.riscv  spmv.riscv.dump  towers.riscv  towers.riscv.dump  vvadd.riscv  vvadd.riscv.dump
testdat/isa/: ZHENKAN_bin2txt.scr  ZHENKAN_elf2bin.scr  rv32mi-p-breakpoint.bin.txt  rv32mi-p-breakpoint.dump  rv32mi-p-csr.bin.txt  rv32mi-p-csr.dump  rv32mi-p-illegal.bin.txt  rv32mi-p-illegal.dump  rv32mi-p-ma_addr.bin.txt  rv32mi-p-ma_addr.dump  rv32mi-p-ma_fetch.bin.txt  rv32mi-p-ma_fetch.dump  rv32mi-p-mcsr.bin.txt  rv32mi-p-mcsr.dump  rv32mi-p-sbreak.bin.txt  rv32mi-p-sbreak.dump  rv32mi-p-scall.bin.txt  rv32mi-p-scall.dump  rv32mi-p-shamt.bin.txt  (+334 more)
(+474 files in other folders)
